# bunny_sniper

./: Cargo.toml  flake.nix
src/: main.rs  snipe.rs
