[package]
name = "bunny_sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serenity = "0.11.6"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "tokio-macros", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
